--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        body{
+            background-color: black;
+            color: white;
+            
+        }
+        .cont{
+            margin: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 30vw;
+            height: 30vh;
+            top: 30vh;
+            position: relative;
+            
+        }
+    </style>
+</head>
+<body>
+    <div class="cont">
+        PC HOTEL KA MALIK GAANDU HAI 
+
+    </div>
+</body>
 </html>
